deploy/kubernetes/fnixagent-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fnixagent
  labels:
    name: fnixagent
    app.kubernetes.io/name: fnixagent
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
